@@ -1,5 +1,5 @@
 # Configure paths for FreeType2
-# Marcelo Magallon 2001-10-26, based on gtk.m4 by Owen Taylor
+# Marcelo Magallon 2001-10-26, based on `gtk.m4` by Owen Taylor
 #
 # Copyright (C) 2001-2021 by
 # David Turner, Robert Wilhelm, and Werner Lemberg.
@@ -15,32 +15,32 @@
 # generated by Autoconf, under the same distribution terms as the rest of
 # that program.
 #
-# serial 5
+# serial 6
 
 # AC_CHECK_FT2([MINIMUM-VERSION [, ACTION-IF-FOUND [, ACTION-IF-NOT-FOUND]]])
 # Test for FreeType 2, and define FT2_CFLAGS and FT2_LIBS.
-# MINIMUM-VERSION is what libtool reports; the default is `7.0.1' (this is
+# MINIMUM-VERSION is what libtool reports; the default is '7.0.1' (this is
 # FreeType 2.0.4).
+#
+# To make this code work with older autoconf versions, `AS_HELP_STRING` is
+# not quoted.
 #
 AC_DEFUN([AC_CHECK_FT2],
   [# Get the cflags and libraries from the freetype-config script
    #
    AC_ARG_WITH([ft-prefix],
-     dnl don't quote AS_HELP_STRING!
      AS_HELP_STRING([--with-ft-prefix=PREFIX],
                     [Prefix where FreeType is installed (optional)]),
      [ft_config_prefix="$withval"],
      [ft_config_prefix=""])
 
    AC_ARG_WITH([ft-exec-prefix],
-     dnl don't quote AS_HELP_STRING!
      AS_HELP_STRING([--with-ft-exec-prefix=PREFIX],
                     [Exec prefix where FreeType is installed (optional)]),
      [ft_config_exec_prefix="$withval"],
      [ft_config_exec_prefix=""])
 
    AC_ARG_ENABLE([freetypetest],
-     dnl don't quote AS_HELP_STRING!
      AS_HELP_STRING([--disable-freetypetest],
                     [Do not try to compile and run a test FreeType program]),
      [],
